# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1081 2012/09/01 19:58:14 zmedico Exp $

  01 Sep 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.11.ebuild,
  -portage-2.2.0_alpha122.ebuild:
  Remove old versions.

*portage-2.2.0_alpha123 (26 Aug 2012)

  26 Aug 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha123.ebuild:
  2.2.0_alpha123 version bump. This includes all of the fixes in 2.1.11.12. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.12 (26 Aug 2012)

  26 Aug 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.12.ebuild:
  2.1.11.12 version bump. This fixes bug #421099 (parallel debugedit/strip
  interference), but #431078 (EAPI 5 stable use masking), and bug #432862
  (ignore irrelevant validate-desktop-entry errors/warnings, especially for KDE
  service entries). Bug #431026 tracks all bugs fixed since portage-2.1.11.9.

  26 Aug 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.65.ebuild,
  -portage-2.1.11.10.ebuild, -portage-2.2.0_alpha110.ebuild,
  -portage-2.2.0_alpha121.ebuild:
  Remove old versions.

  26 Aug 2012; Raúl Porcel <armin76@gentoo.org> portage-2.1.11.9.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #430674

*portage-2.2.0_alpha122 (22 Aug 2012)

  22 Aug 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha122.ebuild:
  2.2.0_alpha122 version bump. This includes all of the fixes in 2.1.11.11. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.11 (22 Aug 2012)

  22 Aug 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.11.ebuild:
  2.1.11.11 version bump. This fixes bug #142202 (fix emerge-webrsync to handle
  permissions when non-root users), bug #364105 (fix emerge-webrsync to use
  PORTAGE_RSYNC_OPTS), bug #392565 (add warning in make.conf man page about
  PORTAGE_TMPDIR under PORTDIR), bug #432024 (emerge poll loop optimizations),