@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1081 2012/09/01 19:58:14 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1082 2012/09/01 20:15:23 zmedico Exp $
+
+  01 Sep 2012; Zac Medico <zmedico@gentoo.org> portage-2.1.11.12.ebuild,
+  portage-2.1.11.9.ebuild, portage-2.1.6.7_p1.ebuild,
+  portage-2.2.0_alpha120.ebuild, portage-2.2.0_alpha123.ebuild,
+  portage-9999.ebuild:
+  Install in /usr/lib instead of using multilib get_libdir, since current
+  versions of portage are do not install any ELF binaries.
 
   01 Sep 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.11.ebuild,
   -portage-2.2.0_alpha122.ebuild:
